# nepenthes module meta-Makefile
# Maximillian Dornseif
# $Id$

SUBDIRS = download-creceive download-csend download-curl download-ftp \
          download-link download-nepenthes download-tftp \
          log-download log-irc module-portwatch \
          submit-file submit-nepenthes submit-norman submit-xmlrpc \
          shellcode-generic shellemu-winnt \
          vuln-asn1 vuln-bagle vuln-dcom vuln-iis vuln-kuang2 vuln-lsass \
          vuln-msmq vuln-mssql vuln-mydoom \
          vuln-netbiosname vuln-netdde vuln-optix vuln-pnp vuln-sasserftpd \
          vuln-sub7 vuln-upnp vuln-veritas vuln-wins\
          x-1 x-2 x-3 x-4 x-5 x-6 x-7  
          # log-prelude vuln-netbios
          # x-5 has linking issues on MacOS X
