# nepenthes module meta-Makefile
# Maximillian Dornseif
# $Id$

SUBDIRS = download-creceive download-csend download-curl download-ftp download-http download-link download-nepenthes download-tftp download-rcp\
          upload-http \
          log-download log-irc \
          submit-file submit-gotek submit-nepenthes submit-norman submit-xmlrpc \
          shellcode-generic shellemu-winnt \
          vuln-asn1 vuln-bagle vuln-dcom vuln-iis vuln-kuang2 vuln-lsass \
          vuln-msdtc vuln-msmq vuln-mssql vuln-mydoom \
          vuln-netbiosname vuln-netdde vuln-optix vuln-pnp vuln-sasserftpd \
          vuln-sub7 vuln-upnp vuln-veritas vuln-wins vuln-dameware vuln-ssh \
          module-portwatch \
          geolocation-hostip geolocation-geoip geolocation-ip2location \
          dnsresolve-adns \
          x-1 x-2 x-3 x-4 x-5 x-6 x-7 x-8 \
          log-surfnet vuln-ftpd \
          log-prelude shellcode-signatures
          
#          vuln-netbios
          # x-5 has linking issues on MacOS X
#         log-surfnet \
#          module-drone\ work in progress
