# nepenthes module meta-Makefile
# Maximillian Dornseif
# $Id$

SUBDIRS = download-creceive download-csend download-curl download-ftp download-http download-link download-tftp download-rcp\
          log-download log-irc \
          submit-file submit-gotek submit-norman submit-postgres submit-http submit-mwserv \
          shellcode-generic shellemu-winnt \
          vuln-asn1 vuln-bagle vuln-dcom vuln-iis vuln-kuang2 vuln-lsass \
          vuln-msdtc vuln-msmq vuln-mssql vuln-mydoom \
          vuln-netbiosname vuln-netdde vuln-optix vuln-pnp vuln-sasserftpd vuln-sav \
          vuln-sub7 vuln-upnp vuln-veritas vuln-wins vuln-dameware vuln-ssh vuln-realvnc \
          module-portwatch module-honeytrap module-bridge module-peiros\
          dnsresolve-adns \
          x-1 x-2 x-3 x-4 x-5 x-6 x-9 \
          log-surfnet log-hexdump vuln-ftpd \
          log-prelude shellcode-signatures \
	  sqlhandler-postgres           
#          vuln-netbios
          # x-5 has linking issues on MacOS X
#         log-surfnet \
#          module-drone\ work in progress
